k8s-yaml/eloan-dev/default-http-backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: default-http-backend
  namespace: dev
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    k8s-app: default-http-backend
  type: ClusterIP
